# tiger-brokers-cash-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
doc/: design.md
doc/tasks/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013-paper-account-testing.md  TASK-INDEX.md
schemas/events/: order.json  transaction.json
src/tiger_mcp/: __main__.py  config.py  server.py
src/tiger_mcp/api/: config_factory.py  tiger_client.py
src/tiger_mcp/events/: models.py  publisher.py  serializers.py  subscriber.py
src/tiger_mcp/safety/: __init__.py  checks.py  state.py  trade_plan_store.py
src/tiger_mcp/tools/account/: __init__.py  tools.py
src/tiger_mcp/tools/market_data/: tools.py
src/tiger_mcp/tools/orders/: _helpers.py  execution.py  management.py  oca.py  query.py  trade_plans.py
tests/: conftest.py  test_config.py  test_integration.py  test_safety_checks.py  test_server.py  test_state.py  test_tiger_client.py  test_trade_plan_store.py
tests/events/: test_models.py  test_publisher.py  test_schema_sync.py  test_serializers.py  test_subscriber.py
tests/tools/: test_account_tools.py  test_market_data_tools.py  test_oca_tools.py  test_order_execution_tools.py  test_order_management_tools.py  test_order_query_tools.py  test_trade_plan_tools.py
