[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiger-mcp"
version = "0.1.0"
description = "Tiger Brokers MCP server for cash account trading"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.20,<2.0",
    "tigeropen>=3.5,<4.0",
    "pandas>=2.1,<3.0",
    "structlog>=24.0,<26.0",
    "orjson>=3.9,<4.0",
]

[project.scripts]
tiger-mcp = "tiger_mcp.__main__:run"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-timeout>=2.2,<3.0",
    "respx>=0.21,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.7,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tiger_mcp"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
